<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Application">
        <SwitchPreference
            android:defaultValue="true"
            android:key="general_auto_start"
            android:summary="@string/pref_description_auto_start"
            android:title="@string/pref_title_auto_start" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="general_restart_wifi"
            android:summary="Restart with ip changes"
            android:title="Restart" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_add_friends_to_messages" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="general_notifications"
            android:title="Notifications"
            android:summary="Enable notifications"/>

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="general_notifications"
            android:key="general_notifications_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone"
            android:summary="Select a notification sound"/>

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="general_notifications"
            android:key="general_notifications_vibrate"
            android:title="@string/pref_title_vibrate"
            android:summary="Enabling vibration for notifications"/>

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_noti_time_on_list_titles"
            android:entryValues="@array/pref_noti_time_on_list_values"
            android:key="general_notifications_time_on"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:dependency="general_notifications"
            android:title="Time on"/>

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_noti_time_off_list_titles"
            android:entryValues="@array/pref_noti_time_off_list_values"
            android:key="general_notifications_time_off"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:dependency="general_notifications"
            android:title="Time off" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_data_sync">

        <ListPreference
            android:defaultValue="180"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sync_frequency" />

        <Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
